<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_3"
    tools:context=".Tablasdemultiplicar">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="101dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="54dp"
            android:text="@string/que_tabla_de_multiplicar_deseas_saber"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="123dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/app_name"

            android:minHeight="48dp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="149dp"
            android:lineSpacingExtra="34sp"
            android:onClick="ImpTabla"
            android:text="Aceptar"
            android:textColor="#CDC46D"
            android:textSize="20sp"
            app:iconTint="#AFBF0A" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="49dp"
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:autofillHints="" />

    </RelativeLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irAInicio2"
        android:text="@string/inicio"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        tools:text="INICIO2" />
</androidx.constraintlayout.widget.ConstraintLayout>